--- a/.gitignore
+++ b/.gitignore
@@ -256,6 +256,8 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# Ignore Backend build files
 Backend/node_modules/
 Backend/dist/**/*
 Backend/.env
