--- a/Backend/package.json
+++ b/Backend/package.json
@@ -25,8 +25,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.5",
     "@types/uuid": "^10.0.0",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "nodemon": "^2.0.15"
+    "typescript": "^5.6.3"
   }
 }
